<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".interfaz_dependiente">

    <TextView
        android:id="@+id/v01"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/v01"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/v02"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/v01"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/v02"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/v03"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/v02"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/v03"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/v04"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/v03"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/v04"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>