<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interfaz_tecnico_usuario">

    <EditText
        android:id="@+id/txp6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp6"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txp7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_toStartOf="@+id/btn10"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp7"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btn10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp6" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp6"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:gravity="left"
        android:text="@string/btn10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp6" />

    <EditText
        android:id="@+id/txp8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp8"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp7" />

    <EditText
        android:id="@+id/txp9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp9"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp8" />


    <EditText
        android:id="@+id/txp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp9" />

    <EditText
        android:id="@+id/txp0100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp10"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@+id/txp0110"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp0100"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/txp0110"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp10" />


    <EditText
        android:id="@+id/txp0110"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp10"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp0110"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txp0100"
        app:layout_constraintTop_toBottomOf="@+id/txp10" />

    <EditText
        android:id="@+id/txp12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp0100"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@+id/icono506"
        android:clickable="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txp12"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/icono506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp0100" />

    <ImageView
        android:id="@+id/icono506"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txp0110"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txp12"
        app:layout_constraintTop_toBottomOf="@+id/txp0100"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tx13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txp12"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@+id/icono89"
        android:gravity="center"
        android:hint="@string/tx13"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/icono89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txp12" />


    <ImageView
        android:id="@+id/icono89"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/icono506"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tx13"
        app:layout_constraintTop_toBottomOf="@+id/icono506"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx13"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|center_horizontal"
        android:text="@string/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx13" />

    <Button
        android:id="@+id/btn12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:srcCompat="@tools:sample/avatars" />-->


</RelativeLayout>